--- a/sdk/android_sdk/AndroidSDKTest/res/values/strings.xml
+++ b/sdk/android_sdk/AndroidSDKTest/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name">AndroidSDKTest</string>
+    <string name="title_activity_main">title</string>
 
 </resources>
